# thekey

./: .gitignore  .gitmodules  LICENCE.md  apkSert.jks.ecrypted  apkSert.jks.encrypted  build.gradle.kts  community.jks  env_build.sh  gradle.properties  keystore.properties  keystore.properties.ecrypted  keystore.properties.encrypted  libs.versions.toml  readme.md  settings.gradle  settings.gradle.kts  signing.gradle
.github/actions/: prepare.yml
app/: build.gradle  build.gradle.kts
app_mobile/: build.gradle.kts  proguard-rules.pro
app_mobile/src/main/cpp/: CMakeLists.txt  cryp_storage.cpp  cryp_storage_v1.cpp  cryp_storage_v2.cpp  edit_storage.cpp  find-storages.cpp  native-lib.cpp  passw_twins.cpp
app_mobile_legacy/: build.gradle.kts
app_mobile_legacy/src/main/cpp/: CMakeLists.txt  native-crypt-storage.cpp  native-find-storage.cpp
buildSrc/: build.gradle.kts  settings.gradle.kts
core/: build.gradle.kts  proguard-rules.pro
tkcore/: CMakeLists.txt  CmakeAndroid.cmake  CmakeTerm.cmake  CmakeTests.cmake  FindOpensslLib.cmake  FindProtoLib.cmake  FindTheKeyLib.cmake  main.cpp
tkcore/.run/: app_mobile.run.xml  app_mobile_long.run.xml  testk1.run.xml  testk2.run.xml  tkey.run.xml
tkcore/android/: CMakeLists.txt
tkcore/core/: CMakeLists.txt  common.cpp  common.h  key_core.h  key_endian.cpp  key_endian.h  key_errors.cpp  key_errors.h  key_signatures.cpp  key_signatures.h
tkcore/core/salt/: salt_base.cpp  salt_base.h
tkcore/cpp_lib/: CMakeLists.txt  def_header.h  native-crypt-storage.cpp  native-find-storage.cpp  thekey.h  thekey_core.h
tkcore/cpp_lib/core/: key_core.h  key_signatures.h
tkcore/cpp_lib/dll_interface/: key_finder.cpp  key_finder.h  key_manager_ctx.cpp  key_manager_ctx.h
tkcore/cpp_lib/find/: CMakeLists.txt  find.cpp  find.h  key_find.cpp  key_storage.cpp  key_storage.h  key_storage_v1.cpp  key_storage_v1.h  key_storage_v2.cpp  key_storage_v2.h
tkcore/cpp_lib/libs/: def_header.h  utils.cpp  utils.h
tkcore/cpp_lib/main/: key_finder.cpp  key_manager_ctx.cpp  key_storage.cpp  key_storage_v1.cpp  key_storage_v2.cpp
tkcore/cpp_lib/main/storage1/: key_storage_v1.cpp  key_storage_v1.h
tkcore/cpp_lib/main/storage2/: encrypt.cpp  split_password.cpp  split_password.h  storage.cpp  storage.h  storage_structure.cpp  storage_structure.h
tkcore/cpp_lib/mapping/: jmapping.cpp  jmapping.h
tkcore/cpp_lib/public/: key_finder.h  key_manager_ctx.h  key_storage.h  key_storage_v1.h  key_storage_v2.h
tkcore/cpp_lib/public/storage2/: split_password.h  storage.h  storage_structure.h
tkcore/cpp_lib/salt_text/: s_text.cpp  s_text.h  salt2.cpp  salt2.h  salt2_schema.cpp  salt2_schema.h  salt_base.cpp  salt_base.h  salt_test1.cpp  salt_test1.h  salt_test2.cpp  salt_test2.h
tkcore/cpp_lib/storage1/: CMakeLists.txt  key1.cpp  key1.h  key_storage_v1.cpp  key_storage_v1.h  pass_spliter_v1.cpp  salt_test1.cpp  storage.h
tkcore/cpp_lib/storage2/: key2.cpp  key2.h  split_password.h  storage.h
tkcore/cpp_lib/storage2/salt_text/: salt2.cpp  salt2.h  salt2_schema.cpp  salt2_schema.h
tkcore/cpp_lib/utils/: common.cpp  common.h  encoding.cpp  encoding.h  pass_spliter.cpp  pass_spliter.h  pass_spliter_v1.cpp
tkcore/find/: CMakeLists.txt  findk1.cpp  findk1.h  findk2.cpp  findk2.h  key_find.cpp  key_find.h  key_storage_v1.h
tkcore/migrate/k1tok2/: CMakeLists.txt  k1tok2.cpp  k1tok2.h
tkcore/otpauth/: CMakeLists.txt  gauthmigration.cpp  otp.cpp  otp.h  otpauthuri.cpp  otpauthuri.h  readme.md
tkcore/otpauth/tools/: base32.cpp  base32.h  base64.cpp  base64.h  endian.h  uri.cpp  uri.h
tkcore/storage1/: CMakeLists.txt  key1.cpp  key1.h  pass_spliter_v1.h  salt_test1.h
tkcore/storage1/salt/: pass_spliter_v1.cpp  pass_spliter_v1.h  salt1.cpp  salt1.h
tkcore/storage2/: CMakeLists.txt  key2.cpp  key2.h  split_password.cpp  split_password.h  storage_structure.cpp  storage_structure.h
tkcore/storage2/format/: key_color.cpp  key_color.h  storage_structure.cpp  storage_structure.h
tkcore/storage2/salt_text/: salt2.cpp  salt2.h  salt2_schema.cpp  salt2_schema.h  salt_base.cpp  salt_base.h
tkcore/term/: CMakeLists.txt  cmd_processing.cpp  cmd_processing.h  def_header.h  interactive.cpp  main.cpp  storage_v1.cpp  storage_v1.h  storage_v2.cpp  storage_v2.h  term_utils.cpp  term_utils.h  termk1.cpp  termk1.h  termk2.cpp  termk2.h  termotp.cpp  termotp.h
tkcore/term/k1/: termk1.cpp  termk1.h
tkcore/term/k2/: termk2.cpp  termk2.h  termk2_common.cpp  termk2_interactive_edit.cpp  termk2_select_note.cpp
tkcore/term/otp/: termotp.cpp  termotp.h
tkcore/term/storage_v1/: storage_v1.cpp  storage_v1.h
tkcore/term/storage_v2/: storage_v2.cpp  storage_v2.h
tkcore/term/utils/: Interactive.h  interactive.cpp  interactive.h  term_utils.cpp  term_utils.h
tkcore/test/: CMakeLists.txt  FindGTestLibs.cmake  FindTestLibs.cmake  crypt2_tests.cpp  gen2_passw_testing.cpp  helpers.cpp  helpers.h  salt2_schemas.cpp  salt2_testing.cpp  salt_testing.cpp
tkcore/test/ktest_core/: CMakeLists.txt  helpers.cpp
tkcore/test/testk1/: CMakeLists.txt  salt_testing.cpp  salt_tests.cpp
tkcore/test/testk1/storage/: change_passw_storage_tests.cpp  create_storage_tests.cpp  empty_description_tests.cpp  read_storage_tests.cpp
tkcore/test/testk1tok2/: CMakeLists.txt  k1tok2_tests.cpp
tkcore/test/testk2/: CMakeLists.txt  auth_migration_test.cpp  copt_tests.cpp  crypt_tests.cpp  encoding_schemas_tests.cpp  find_schemas_tests.cpp  gen_passw_tests.cpp  otp_gen_tests.cpp  otp_uri_tests.cpp  salt2_testing.cpp  uri_tests.cpp
tkcore/test/testk2/otp/: auth_migration_test.cpp  otp_algo_tests.cpp  otp_gen_tests.cpp  otp_uri_tests.cpp  uri_export_tests.cpp  yaotp_gen_aegis_tests.cpp  yaotp_gen_tests.cpp
tkcore/test/testk2/schemas/: encoding_schemas_tests.cpp  find_schemas_tests.cpp  unic_schemas_tests.cpp
tkcore/test/testk2/storage/: change_passw_storage_tests.cpp  change_passw_strategy_tests.cpp  create_storage2_tests.cpp  issue44_tests.cpp  read_issue44_tests.cpp  read_storage2_tests.cpp  setheader_tests.cpp
tkcore/test/testk2/twins/: gen_passw_tests.cpp  storage_passw_twins_tests.cpp
(+1021 files in other folders)
